[FER-358] Added change detection support.